--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -181,7 +181,7 @@
 						name="name"
 						formControlName="name"
 						placeholder="Sidnei de Souza Junior"
-						class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-transparent focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+						class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-blue-500 focus:bg-transparent focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 					/>
 				</div>
 
@@ -195,7 +195,7 @@
 						name="email"
 						formControlName="email"
 						placeholder="contato@astertech.site"
-						class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-transparent focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+						class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-blue-500 focus:bg-transparent focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 					/>
 				</div>
 
@@ -229,7 +229,7 @@
 				<div class="xl:w-1/3 md:w-1/2 p-4">
 					<div class="border border-gray-200 p-6 rounded-lg h-full">
 						<div
-							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4"
+							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-blue-100 text-blue-500 mb-4"
 						>
 							<svg
 								fill="none"
@@ -258,23 +258,9 @@
 				<div class="xl:w-1/3 md:w-1/2 p-4">
 					<div class="border border-gray-200 p-6 rounded-lg h-full">
 						<div
-							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4"
+							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-blue-500 text-blue-500 mb-4"
 						>
-							<svg
-								fill="none"
-								stroke="currentColor"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								class="w-6 h-6"
-								viewBox="0 0 24 24"
-							>
-								<circle cx="6" cy="6" r="3"></circle>
-								<circle cx="6" cy="18" r="3"></circle>
-								<path
-									d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"
-								></path>
-							</svg>
+							<img src="assets/images/bar-chat-icon.svg" alt="" />
 						</div>
 						<h2
 							class="text-2xl text-white font-semibold title-font mb-2"
@@ -292,7 +278,7 @@
 				<div class="xl:w-1/3 md:w-1/2 p-4">
 					<div class="border border-gray-200 p-6 rounded-lg h-full">
 						<div
-							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4"
+							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-blue-100 text-blue-500 mb-4"
 						>
 							<svg
 								fill="none"
@@ -325,7 +311,7 @@
 				<div class="xl:w-1/3 md:w-1/2 p-4">
 					<div class="border border-gray-200 p-6 rounded-lg h-full">
 						<div
-							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4"
+							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-blue-100 text-blue-500 mb-4"
 						>
 							<svg
 								fill="none"
@@ -357,21 +343,12 @@
 				<div class="xl:w-1/3 md:w-1/2 p-4">
 					<div class="border border-gray-200 p-6 rounded-lg h-full">
 						<div
-							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4"
+							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-blue-500 text-blue-500 mb-4"
 						>
-							<svg
-								fill="none"
-								stroke="currentColor"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								class="w-6 h-6"
-								viewBox="0 0 24 24"
-							>
-								<path
-									d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"
-								></path>
-							</svg>
+							<img
+								src="assets/images/notification-icon.svg"
+								alt=""
+							/>
 						</div>
 						<h2
 							class="text-2xl text-white font-semibold title-font mb-2"
@@ -389,7 +366,7 @@
 				<div class="xl:w-1/3 md:w-1/2 p-4">
 					<div class="border border-gray-200 p-6 rounded-lg h-full">
 						<div
-							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-indigo-100 text-indigo-500 mb-4"
+							class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-blue-100 text-blue-500 mb-4"
 						>
 							<svg
 								fill="none"
@@ -537,10 +514,10 @@
 				<!-- Card Premium -->
 				<div class="p-4 xl:w-1/4 md:w-1/2 w-full">
 					<div
-						class="h-full p-6 rounded-lg border-2 border-indigo-500 flex flex-col relative overflow-hidden"
+						class="h-full p-6 rounded-lg border-2 border-blue-600 flex flex-col relative overflow-hidden"
 					>
 						<span
-							class="bg-indigo-500 text-white px-3 py-1 tracking-widest text-xs absolute right-0 top-0 rounded-bl"
+							class="bg-blue-600 text-white px-3 py-1 tracking-widest text-xs absolute right-0 top-0 rounded-bl"
 							>POPULAR</span
 						>
 						<h2
@@ -659,7 +636,7 @@
 							>Gerenciamento de Estoque de Medicamentos
 						</p>
 						<button
-							class="flex items-center mt-auto text-white bg-indigo-500 border-0 py-2 px-4 w-full focus:outline-none hover:bg-indigo-600 rounded"
+							class="flex items-center mt-auto text-white bg-blue-600 border-0 py-2 px-4 w-full focus:outline-none hover:bg-blue-600 rounded"
 						>
 							Selecionar
 							<svg
@@ -695,7 +672,7 @@
 							></div>
 						</div>
 						<div
-							class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+							class="flex-shrink-0 w-10 h-10 rounded-full bg-blue-500 inline-flex items-center justify-center text-white relative z-10"
 						>
 							<svg
 								fill="none"
@@ -703,12 +680,10 @@
 								stroke-linecap="round"
 								stroke-linejoin="round"
 								stroke-width="2"
-								class="w-5 h-5"
+								class="w-6 h-6"
 								viewBox="0 0 24 24"
 							>
-								<path
-									d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"
-								></path>
+								<path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
 							</svg>
 						</div>
 						<div class="flex-grow pl-4">
@@ -735,19 +710,9 @@
 							></div>
 						</div>
 						<div
-							class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+							class="flex-shrink-0 w-10 h-10 rounded-full bg-blue-500 inline-flex items-center justify-center text-white relative z-10"
 						>
-							<svg
-								fill="none"
-								stroke="currentColor"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								class="w-5 h-5"
-								viewBox="0 0 24 24"
-							>
-								<path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
-							</svg>
+							<img src="assets/images/bar-chat-icon.svg" alt="" />
 						</div>
 						<div class="flex-grow pl-4">
 							<h2
@@ -772,22 +737,12 @@
 							></div>
 						</div>
 						<div
-							class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+							class="flex-shrink-0 w-10 h-10 rounded-full bg-blue-500 inline-flex items-center justify-center text-white relative z-10"
 						>
-							<svg
-								fill="none"
-								stroke="currentColor"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								class="w-5 h-5"
-								viewBox="0 0 24 24"
-							>
-								<circle cx="12" cy="5" r="3"></circle>
-								<path
-									d="M12 22V8M5 12H2a10 10 0 0020 0h-3"
-								></path>
-							</svg>
+							<img
+								src="assets/images/notification-icon.svg"
+								alt=""
+							/>
 						</div>
 						<div class="flex-grow pl-4">
 							<h2
@@ -813,22 +768,9 @@
 							></div>
 						</div>
 						<div
-							class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+							class="flex-shrink-0 w-10 h-10 rounded-full bg-blue-500 inline-flex items-center justify-center text-white relative z-10"
 						>
-							<svg
-								fill="none"
-								stroke="currentColor"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								class="w-5 h-5"
-								viewBox="0 0 24 24"
-							>
-								<path
-									d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"
-								></path>
-								<circle cx="12" cy="7" r="4"></circle>
-							</svg>
+							<img src="assets/images/pill-icon.svg" alt="" />
 						</div>
 						<div class="flex-grow pl-4">
 							<h2
@@ -847,7 +789,7 @@
 					<!-- STEP 5 -->
 					<div class="flex relative">
 						<div
-							class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
+							class="flex-shrink-0 w-10 h-10 rounded-full bg-blue-500 inline-flex items-center justify-center text-white relative z-10"
 						>
 							<svg
 								fill="none"
@@ -859,9 +801,8 @@
 								viewBox="0 0 24 24"
 							>
 								<path
-									d="M22 11.08V12a10 10 0 11-5.93-9.14"
+									d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"
 								></path>
-								<path d="M22 4L12 14.01l-3-3"></path>
 							</svg>
 						</div>
 						<div class="flex-grow pl-4">
@@ -925,7 +866,7 @@
 								name="name"
 								formControlName="name"
 								required
-								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-blue-500 focus:bg-white focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 							/>
 						</div>
 					</div>
@@ -942,7 +883,7 @@
 								name="email"
 								formControlName="email"
 								required
-								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-blue-500 focus:bg-white focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 							/>
 						</div>
 					</div>
@@ -958,7 +899,7 @@
 								name="message"
 								formControlName="message"
 								required
-								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"
+								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-blue-500 focus:bg-white focus:ring-2 focus:ring-blue-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"
 							></textarea>
 						</div>
 					</div>
