--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -51,6 +51,17 @@
 						required
 						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 					/>
+
+					@if (registerForm.get('email')) {
+					<app-error-message
+						[control]="registerForm.get('email')"
+						[errorMessage]="
+							registerForm.get('email')?.hasError('required')
+								? 'O campo email é obrigatório'
+								: 'O e-mail inserido é inválido'
+						"
+					></app-error-message>
+					}
 				</div>
 			</div>
 
@@ -74,6 +85,17 @@
 						required
 						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 					/>
+
+					@if (registerForm.get('password')) {
+					<app-error-message
+						[control]="registerForm.get('password')"
+						[errorMessage]="
+							registerForm.get('password')?.hasError('required')
+								? 'O campo senha é obrigatório'
+								: 'A senha tem que ter no mínimo 8 caracteres'
+						"
+					></app-error-message>
+					}
 				</div>
 			</div>
 
@@ -100,6 +122,18 @@
 					>
 				</label>
 			</div>
+			@if (registerForm.get('terms_and_conditions')) {
+			<app-error-message
+				[control]="registerForm.get('terms_and_conditions')"
+				[errorMessage]="
+					registerForm
+						.get('terms_and_conditions')
+						?.hasError('required')
+						? 'Precisa aceitar os termos e condições para continuar'
+						: 'Precisa aceitar os termos e condições para continuar'
+				"
+			></app-error-message>
+			}
 
 			<!-- Register Account -->
 			<div>
