--- a/src/app/modules/dashboard-perfil/dashboard-perfil.component.html
+++ b/src/app/modules/dashboard-perfil/dashboard-perfil.component.html
@@ -291,13 +291,13 @@
 				routerLink="/dashboard"
 				routerLinkActive="active"
 				type="button"
-				class="flex w-1/12 justify-center rounded-md bg-gray-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
+				class="flex auto justify-center rounded-md bg-gray-500 px-4 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
 			>
 				Cancelar
 			</button>
 			<button
 				type="submit"
-				class="flex w-1/12 justify-center rounded-md bg-blue-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
+				class="flex justify-center rounded-md bg-blue-600 px-4 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
 			>
 				{{ createNewUser ? "Salvar" : "Atualizar" }}
 			</button>
